--- a/nose2.cfg
+++ b/nose2.cfg
@@ -1,12 +1,14 @@
 [unittest]
 start-dir = ./py_digilab/tests
 test-file-pattern = *_test.py
-test-method-prefix = test_*
+test-method-prefix = test_
 plugins = nose2_html_report.html_report
 
 [html-report]
 always-on = True
-path = test_results/coverage_report.html
+path = test_report.html
 
 [coverage]
 always-on = True
+coverage-report = html
+                  term
