Added classification to dQSSA rule base. Changed around elements. Propagated change of package name to files.

--- a/nose2.cfg
+++ b/nose2.cfg
@@ -1,5 +1,5 @@
 [unittest]
-start-dir = ./py_digilab/tests
+start-dir = ./digilab/tests
 test-file-pattern = *_test.py
 test-method-prefix = test_
 plugins = nose2_html_report.html_report
